unification of signal preprocessing cleaning rtQA unification jsons update

--- a/opennft/configs/NF_PSC_cont_155.ini
+++ b/opennft/configs/NF_PSC_cont_155.ini
@@ -1,7 +1,7 @@
 [General]
 ProjectName=PSC_CONT
 SubjectID=foo
-WatchFolder=C:\\Users\\User\\Desktop\\OpenNFT_DemoData\\NF_PSC\\NF_Run_1
+WatchFolder=C:\\_RT\\rtData\\NF_PSC\\NF_Run_1
 NFRunNr=1
 ImgSerNr=7
 DicomFirstImageNr=1
@@ -15,14 +15,14 @@ MatrixSizeX=74
 MatrixSizeY=74
 NrOfSlices=36
 GetMAT=false
-WorkFolder=C:\\Users\\User\\Desktop\\OpenNFT_DemoData\\NF_PSC
-StimulationProtocol=C:\\Users\\User\\PycharmProjects\\OpenNFT\\opennft\\configs\\NF_PSC_cont_155.json
-RoiFilesFolder=C:\\Users\\User\\Desktop\\OpenNFT_DemoData\\NF_PSC\\ROIs_D1
+WorkFolder=C:\\_RT\\rtData\\NF_PSC
+StimulationProtocol=C:\\OpenNFT\\opennft\\configs\\NF_PSC_cont_155.json
+RoiFilesFolder=C:\\_RT\\rtData\\NF_PSC\\ROIs_D1
 RoiAnatOperation=median(norm_percValues)
 RoiGroupFolder=
 WeightsFileName=
-MCTempl=C:\\Users\\User\\Desktop\\OpenNFT_DemoData\\NF_PSC\\EPI_Template_D1\\fanon-0007-00006-000006-01.nii
-StructBgFile=C:\\Users\\User\\Desktop\\OpenNFT_DemoData\\NF_PSC\\T1_D2\\structScan_PSC.nii
+MCTempl=C:\\_RT\\rtData\\NF_PSC\\EPI_Template_D1\\fanon-0007-00006-000006-01.nii
+StructBgFile=C:\\_RT\\rtData\\NF_PSC\\T1_D2\\structScan_PSC.nii
 TaskFolder=
 Prot=Cont
 OfflineMode=true
